semester2/object_oriented_programming/tps/.svn/pristine/cd/cd20eb25d020071b66eca2ee80ac6a76ddc272ef.svn-base
./allumettes/StrategieExpert.java:18: error: cannot find symbol
			return Generateur.nb_Aleatoire(jeu);
			       ^
  symbol:   variable Generateur
  location: class StrategieExpert
./allumettes/StrategieNaive.java:6: error: cannot find symbol
		return Generateur.nb_Aleatoire(jeu);
		       ^
  symbol:   variable Generateur
  location: class StrategieNaive
2 errors
